2004-05-31  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp, 
	lib/contacts/gm_contacts-remote.cpp,
	lib/contacts/gm_contacts-remote.h, lib/contacts/gm_contacts.cpp,
	lib/contacts/gm_contacts.h: Support for the addressbook ID. Fixed 
	several problems.

	* src/Makefile.am, src/addressbook_window.cpp, src/callbacks.cpp,
	src/calls_history_window.cpp, src/chat_window.cpp, src/common.h,
	src/config.cpp, src/endpoint.cpp, src/gnomemeeting.cpp, src/ils.cpp,
	src/ils.h, src/ldap_window.cpp, src/ldap_window.h, src/log_window.h,
	src/menu.cpp, src/toolbar.cpp, src/tools.cpp, src/tray.cpp, 
	src/urlhandler.cpp: Removed dependancy on ldap_window.*, Removed 
	GMILSBrowser as it is now unuseful.

2004-05-30  Damien Sandras  <dsandras@gnome.org>

	* lib/dialog.c: Use gtk_widget_show instead of gtk_widget_show_all,
	fixes bug with the tray applet showing the whole gm when being
	clicked.

	* lib/contacts/gm_contacts-remote.cpp, 
	lib/contacts/gm_contacts-remote.h, lib/contacts/gm_contacts.cpp, 
	lib/contacts/gm_contacts.h, src/addressbook_window.cpp: More work
	on the addressbook.

2004-05-26  Damien Sandras  <dsandras@gnome.org>

	* lib/widgets/history-combo.c, lib/xdap/xdap.c, src/callbacks.cpp,
	src/config.cpp, src/main_window.cpp, src/tray.cpp: More fixes.
	Added Xavier Ricco and Julien Hamaide to the About Box.

2004-05-26  Julien Puydt  <julien.puydt@laposte.net>

	* src/chat_window.cpp: fixed a memory management oddity, that leads to
	a crash on WIN32 (thanks to Xavier Ricco!)

2004-05-26  Damien Sandras  <dsandras@gnome.org>

	* lib/widgets/history-combo.c, lib/xdap/xdap.c: More fixes.

2004-05-26  Damien Sandras  <dsandras@gnome.org>

	* lib/Makefile.am, lib/e-splash.c, lib/eggtrayicon.c, 
	lib/gm_conf-glib.c, lib/about/Makefile.am, lib/contacts/Makefile.am, 
	lib/druid/Makefile.am, lib/widgets/Makefile.am, 
	lib/widgets/history-combo.c, lib/xdap/Makefile.am, lib/xdap/xdap.c,
	lib/xdap/xdap.h, src/callbacks.cpp, src/main_window.cpp, 