@@ -1,6 +1,15 @@
 2004-05-31  Damien Sandras  <dsandras@gnome.org>
 
 	* lib/contacts/gm_contacts-eds.cpp, 
+	lib/contacts/gm_contacts-remote.cpp, lib/contacts/gm_contacts.h,
+	src/addressbook_window.cpp: Added support for the calling search
+	attribute. Added support for the phone icon in the ILS listing.
+
+	* src/menu.cpp: Fixed bug.
+
+2004-05-31  Damien Sandras  <dsandras@gnome.org>
+
+	* lib/contacts/gm_contacts-eds.cpp, 
 	lib/contacts/gm_contacts-remote.cpp,
 	lib/contacts/gm_contacts-remote.h, lib/contacts/gm_contacts.cpp,
 	lib/contacts/gm_contacts.h: Support for the addressbook ID. Fixed 
